# signal_sr

./: .gitignore  pyproject.toml
data/: __init__.py  datasets.py
data/nlm/: __init__.py  eda.ipynb  preprocessing.py  splits.ipynb
data/smmala/: demo_cellposesam_res.ipynb
data/synthetic/: __init__.py  synthetic.py
scripts/: rsync_code.sh  submit_jeanzay.py
src/posthoc/: __init__.py  data.py  run.py
src/posthoc/config/: nlm_bilinear_posthoc.yaml  synthetic_bilinear_posthoc.yaml
src/posthoc/notebooks/: nlm_parasite_detector_debug.ipynb
src/posthoc/parasite_detector/: __init__.py  candidates.py  cells.py  cli.py  config.py  detector.py  features.py  parasite_channel.py  preprocessing.py  visualize.py
src/posthoc/utils/: config.py  degradations.py  metrics.py  misc.py
src/prehoc/: __init__.py  datasets.py  run.py
src/prehoc/config/: nlm_biasedcolors_bilinear_sweep.yaml  nlm_bilinear_sweep.yaml  nlm_bilinear_sweep_jz.yaml  nlm_fullbiased_bilinear_sweep.yaml  nlm_natural_bilinear_sweep.yaml  nlm_semibiased_bilinear_sweep.yaml  nlm_semibiasedcolors_bilinear_sweep.yaml
src/prehoc/models/: __init__.py  classifier.py
src/prehoc/utils/: __init__.py  degradations.py  metrics.py  seed.py  transforms.py
src/sr/: __init__.py  compute_fid.py  data.py  diagnostics.py  infer.py  splits.py  synthetic.py  train_pixel.py
src/sr/inference/: __init__.py  eps.py  inverter.py  sampler.py  spectral_sdedit.py  spectral_sedit.py
src/sr/models/: __init__.py  autoencoder.py  conditioning.py  denoiser_adapter.py  registry.py
src/sr/notebooks/: debug_dps_nlm.ipynb  debug_native_lr_spectral_sdedit.ipynb  (+1 more)
tests/: test_parasite_detector.py  test_posthoc_run.py  test_spectral_sdedit.py
(+20 files in other folders)
