[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal_sr"
version = "0.1.0"
description = "Framework to evaluate presence of signal pre SR, train Super Res models, and evaluate post SR."
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.30",
  "anywidget>=0.11.0",
  "diffusers>=0.30",
  "ipykernel>=7.3.0",
  "ipywidgets>=8.1.8",
  "matplotlib>=3.10.9",
  "numpy>=1.24",
  "omegaconf>=2.3",
  "pandas>=2.0",
  "peft>=0.17.0",
  "pillow>=10.0",
  "plotly>=6.8.0",
  "protobuf<4",
  "pytest>=8.0",
  "pyyaml>=6.0",
  "scikit-image>=0.22",
  "scikit-learn>=1.7.2",
  "submitit>=1.5",
  "scipy>=1.10",
  "torch==2.10.0",
  "torchvision>=0.25.0",
  "umap-learn>=0.5.12",
  "wandb>=0.16",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sr*", "prehoc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
ignore = [
    "E501", # Never enforce `E501` (line length violations).
    "E731", # Do not assign a lambda expression, use a def
]
line-length = 150
indent-width = 4
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401", # imported but unused
    "E402", # Module level import not at top of file
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.pycodestyle]
max-doc-length = 150

[tool.black]
line-length = 150
target-version = ['py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | outputs
)/
'''
